--- a/src/popup.html
+++ b/src/popup.html
@@ -27,7 +27,8 @@
     <div id="nowPlaying">Sin reproducción</div>
     <div class="controls">
       <button id="btnPlayPause" disabled>Reproducir</button>
-      <input id="volume" type="range" min="0" max="100" value="80" />
+      <input id="volume" type="range" min="0" max="100"/>
+      <div id="timeDisplay">0:00 / 0:00</div>
     </div>
     <div class="secondary">
       <button id="btnOpenYouTube">Abrir YouTube para iniciar sesión</button>
